[go-release-mamnger-test][sdfs1c8f12be0e6b99e8cfbea81sdfsdf9b983df0][5: fixed handle tasks that are not in convention]

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${file}",
-            "args": ["/home/coder/project/gitops-release-manager"]
+            "args": ["/home/coder/project/gitops-release-manager","adamrussak","go-release-mamnger-test"]
         },
         {
             "name": "Launch Package",
