--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master # or the name of your main branch
+      - main # or the name of your main branch
 jobs:
   build:
     name: Build
