added test to sonar properties 2

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,6 @@
 sonar.projectKey=AdamRussak_gitops-release-manager_AYTkUtdVCiJVRHSjyQMI
-sonar.test.inclusions=*/Test*.go
+  sonar.sources=.
+  sonar.exclusions=**/*_test.go
+
+  sonar.tests=.
+  sonar.test.inclusions=**/*_test.go
