--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,14 @@ jobs:
         with:
           go-version: '1.19'
           check-latest: true
-      - name: Run Tests
-        run: go test ./... -coverprofile=coverage.out
+      - name: Get gometalinter
+        run: go get -u gopkg.in/alecthomas/gometalinter.v2 && $GOPATH/bin/gometalinter.v2 --install
+      - name: Run gometalinter
+        run: $GOPATH/bin/gometalinter.v2 . > gometalinter-report.out || true
+      - name: Run test coverage
+        run:  go test ./... -coverprofile=coverage.out
+      - name: Run test report
+        run:  go test ./... -json > report.json
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
