--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,21 @@
+# =====================================================
+#   Standard properties
+# =====================================================
 sonar.projectKey=AdamRussak_gitops-release-manager_AYTkUtdVCiJVRHSjyQMI
 sonar.sources=.
 sonar.exclusions=**/*_test.go
-
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
+# =====================================================
+#   Meta-data for the project
+# =====================================================
+sonar.links.homepage=https://github.com/SonarSource/sonarcloud_example_go-sqscanner-travis
+sonar.links.scm=https://github.com/AdamRussak/gitops-release-manager
+sonar.links.issue=https://github.com/AdamRussak/gitops-release-manager/issues
+
+# =====================================================
+#   Properties specific to Go
+# =====================================================
+sonar.go.gometalinter.reportPaths=gometalinter-report.out
+sonar.go.tests.reportPaths=report.json
 sonar.go.coverage.reportPaths=coverage.out
