--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: '1.19'
           check-latest: true
       - name: Get gometalinter
-        run: go get -u gopkg.in/alecthomas/gometalinter.v2 && $GOPATH/bin/gometalinter.v2 --install
+        run: go get -u gopkg.in/alecthomas/gometalinter.v2 && /home/runner/go/bin/gometalinter.v2 --install
       - name: Run gometalinter
         run: $GOPATH/bin/gometalinter.v2 . > gometalinter-report.out || true
       - name: Run test coverage
