--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,6 +16,6 @@ sonar.links.issue=https://github.com/AdamRussak/gitops-release-manager/issues
 # =====================================================
 #   Properties specific to Go
 # =====================================================
-sonar.go.gometalinter.reportPaths=gometalinter-report.out
+# sonar.go.gometalinter.reportPaths=gometalinter-report.out
 sonar.go.tests.reportPaths=report.json
 sonar.go.coverage.reportPaths=coverage.out
