--- a/.github/workflows/release-new-version.yaml
+++ b/.github/workflows/release-new-version.yaml
@@ -7,7 +7,7 @@ on:
     tags: 
         - '*'
 env:
-  PACKAGE_NAME: grn
+  PACKAGE_NAME: gitops-release-manager
 # workflow tasks
 #https://trstringer.com/github-actions-create-release-upload-artifacts/
 jobs:
